--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefautDB": "Server=DESKTOP-2I4K8I6\SQLEXPRESS;database=Harmon;user=sa;password=12345;TrustServerCertificate=True;"
+    "DefautDB": "Server=BNK-CUONGTQ;database=Harmon;user=sa;password=12345;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
