--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefautDB": "Server=BNK-CUONGTQ;database=Harmon;user=sa;password=12345;TrustServerCertificate=True;"
+    "DefautDB": "Server=DESKTOP-75RNH8M\\AN;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
