--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefautDB": "Server=DESKTOP-75RNH8M\\AN;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "DefautDB": "Server=DESKTOP-V5P9T7B;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;"
+    },
   "AllowedHosts": "*"
 }
