--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -1,12 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-    "ConnectionStrings": {
-        "DefautDB": "Server=DESKTOP-V5P9T7B;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;"
+    "EmailSettings": {
+        "EmailAddress": "quoccuongdevbe@gmail.com",
+        "AppPassword": "uoaz zxqu rinp kzhz",
+        "Host": "smtp.gmail.com",
+        "Port": 587
     },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefautDB": "Server=DESKTOP-V5P9T7B;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
+        "Redis": "127.0.0.1:6379, abortConnect=false"
+    },
+
+    "AllowedHosts": "*"
 }
