--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -12,7 +12,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefautDB": "Server=DESKTOP-V5P9T7B;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
+        "DefautDB": "Server=BNK-CUONGTQ;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
         "Redis": "127.0.0.1:6379, abortConnect=false"
     },
 
