--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -11,10 +11,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        "DefautDB": "Server=BNK-CUONGTQ;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
-        "Redis": "127.0.0.1:6379, abortConnect=false"
-    },
+  "ConnectionStrings": {
+    "DefautDB": "Server=DESKTOP-75RNH8M\\AN;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
+    "Redis": "127.0.0.1:6379, abortConnect=false"
+  },
 
     "AllowedHosts": "*"
 }
