--- a/Galini/Galini.API/Galini.API.csproj
+++ b/Galini/Galini.API/Galini.API.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Galini.Services\Galini.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
