--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -18,6 +18,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Oauth": {
+        "ClientId": "332672159067-uqof3vkoopbdo5a85g6q86vk6raf1gi4.apps.googleusercontent.com",
+        "ClientSecret": "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"
+    },
     "ConnectionStrings": {
         "DefautDB": "Server=BNK-CUONGTQ;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
         "Redis": "127.0.0.1:6379, abortConnect=false"
