--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -22,10 +22,10 @@
         "ClientId": "332672159067-uqof3vkoopbdo5a85g6q86vk6raf1gi4.apps.googleusercontent.com",
         "ClientSecret": "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"
     },
-  "ConnectionStrings": {
-    "DefautDB": "Server=DESKTOP-75RNH8M\\AN;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
-    "Redis": "127.0.0.1:6379, abortConnect=false"
-  },
+    "ConnectionStrings": {
+        "DefautDB": "Server=DESKTOP-V5P9T7B;Uid=sa;Pwd=12345;Database=Harmon;TrustServerCertificate=True;",
+        "Redis": "127.0.0.1:6379, abortConnect=false"
+    },
 
     "AllowedHosts": "*"
 }
