lo tay xoa app password

--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -1,7 +1,7 @@
 {
     "EmailSettings": {
         "EmailAddress": "quoccuongdevbe@gmail.com",
-        "AppPassword": "uoaz zxqu rinp kzhz",
+        "AppPassword": "yxgp cqah gcyw texe",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
