--- a/Galini/Galini.Models/Galini.Models.csproj
+++ b/Galini/Galini.Models/Galini.Models.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
     <PackageReference Include="MailKit" Version="4.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
@@ -25,6 +26,10 @@
     <PackageReference Include="MimeKit" Version="4.9.0" />
     <PackageReference Include="payOS" Version="1.0.9" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Payload\Response\Blog\" />
   </ItemGroup>
 
 </Project>
