api upload image

--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -27,6 +27,10 @@
         "DefautDB": "Server=14.225.220.28;Uid=sa;Pwd=0363919179aN;Database=Harmon;TrustServerCertificate=True;",
         "Redis": "127.0.0.1:6379, abortConnect=false"
     },
+    "Firebase": {
+        "ApiKey": "AIzaSyDJzyz5bdl4plYaP0h9PD8xBkR0YAaOZDc",
+        "AuthDomain": "test-ce15e.firebaseapp.com"
+    },
 
     "AllowedHosts": "*"
 }
