--- a/Galini/Galini.Services/Galini.Services.csproj
+++ b/Galini/Galini.Services/Galini.Services.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="MimeKit" Version="4.9.0" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.5" />
   </ItemGroup>
 
 </Project>
