--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -1,7 +1,7 @@
 {
     "EmailSettings": {
-        "EmailAddress": "quoccuongdevbe@gmail.com",
-        "AppPassword": "yxgp cqah gcyw texe",
+        "EmailAddress": "tranquoccuong13072002@gmail.com",
+        "AppPassword": "rpno rguj uklx ween",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
