--- a/Galini/Galini.API/appsettings.json
+++ b/Galini/Galini.API/appsettings.json
@@ -1,7 +1,7 @@
 {
     "EmailSettings": {
-        "EmailAddress": "tranquoccuong13072002@gmail.com",
-        "AppPassword": "rpno rguj uklx ween",
+        "EmailAddress": "cuongtqse160059@fpt.edu.vn",
+        "AppPassword": "kjog thsx wocs onry",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
